<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">QR Scanner</string>
    <string name="scan_hint">Point camera at a QR code</string>
    <string name="history">History</string>
    <string name="clear_history">Clear history</string>
    <string name="clear_history_confirm">Remove all scan history?</string>
    <string name="cancel">Cancel</string>
    <string name="clear">Clear</string>
    <string name="open_in_browser">Open in browser</string>
    <string name="copy">Copy</string>
    <string name="copied">Copied</string>
    <string name="no_history">No scans yet</string>
    <string name="history_subtitle">Entries are removed after 30 days</string>
    <string name="camera_permission_required">Camera permission is required to scan QR codes</string>
    <string name="grant_permission">Grant permission</string>
    <string name="scanned_content">Scanned content</string>
    <string name="dismiss">Dismiss</string>
    <string name="open">Open</string>
</resources>
